antlr/craspParser.py
# Generated from crasp.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class craspParser ( Parser ):

    grammarFileName = "crasp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'true'", "'false'", "'if'", "'else'", "'&&'", "'!'", 
                     "'=='", "'<'", "'='", "'?'", "':'", "'+'", "'-'", "'min'", 
                     "'max'", "'#'", "'('", "')'", "','" ]

    symbolicNames = [ "<INVALID>", "VARIABLE", "STRING_LITERAL", "INT_LITERAL", 
                      "TRUE", "FALSE", "IF", "ELSE", "AND", "NOT", "EQ", 
                      "LT", "ASSIGN", "QUESTION", "COLON", "PLUS", "MINUS", 
                      "MIN", "MAX", "COUNT", "LPAREN", "RPAREN", "COMMA", 
                      "NL", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_bool_expr = 2
    RULE_count_expr = 3

    ruleNames =  [ "program", "statement", "bool_expr", "count_expr" ]

    EOF = Token.EOF
    VARIABLE=1
    STRING_LITERAL=2
    INT_LITERAL=3
    TRUE=4
    FALSE=5
    IF=6
    ELSE=7
    AND=8
    NOT=9
    EQ=10
    LT=11
    ASSIGN=12
    QUESTION=13
    COLON=14
    PLUS=15
    MINUS=16
    MIN=17
    MAX=18
    COUNT=19
    LPAREN=20
    RPAREN=21
    COMMA=22
    NL=23
    WS=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(craspParser.StatementContext)
            else:
                return self.getTypedRuleContext(craspParser.StatementContext,i)


        def EOF(self):
            return self.getToken(craspParser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(craspParser.NL)
            else:
                return self.getToken(craspParser.NL, i)

        def getRuleIndex(self):
            return craspParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = craspParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 11
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 8
                self.match(craspParser.NL)
                self.state = 13
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 14
            self.statement()
            self.state = 23
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 16 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 15
                        self.match(craspParser.NL)
                        self.state = 18 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==23):
                            break

                    self.state = 20
                    self.statement() 
                self.state = 25
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==23:
                self.state = 26
                self.match(craspParser.NL)
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 32
            self.match(craspParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(craspParser.VARIABLE, 0)

        def ASSIGN(self):
            return self.getToken(craspParser.ASSIGN, 0)

        def bool_expr(self):
            return self.getTypedRuleContext(craspParser.Bool_exprContext,0)


        def count_expr(self):
            return self.getTypedRuleContext(craspParser.Count_exprContext,0)


        def getRuleIndex(self):
            return craspParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = craspParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 34
            self.match(craspParser.VARIABLE)
            self.state = 35
            self.match(craspParser.ASSIGN)
            self.state = 38
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 36
                self.bool_expr(0)
                pass

            elif la_ == 2:
                self.state = 37
                self.count_expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Bool_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_LITERAL(self):
            return self.getToken(craspParser.STRING_LITERAL, 0)

        def count_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(craspParser.Count_exprContext)
            else:
                return self.getTypedRuleContext(craspParser.Count_exprContext,i)


        def LT(self):
            return self.getToken(craspParser.LT, 0)

        def EQ(self):
            return self.getToken(craspParser.EQ, 0)

        def NOT(self):
            return self.getToken(craspParser.NOT, 0)

        def bool_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(craspParser.Bool_exprContext)
            else:
                return self.getTypedRuleContext(craspParser.Bool_exprContext,i)


        def VARIABLE(self):
            return self.getToken(craspParser.VARIABLE, 0)

        def LPAREN(self):
            return self.getToken(craspParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(craspParser.RPAREN, 0)

        def TRUE(self):
            return self.getToken(craspParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(craspParser.FALSE, 0)

        def AND(self):
            return self.getToken(craspParser.AND, 0)

        def getRuleIndex(self):
            return craspParser.RULE_bool_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBool_expr" ):
                listener.enterBool_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBool_expr" ):
                listener.exitBool_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBool_expr" ):
                return visitor.visitBool_expr(self)
            else:
                return visitor.visitChildren(self)



    def bool_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = craspParser.Bool_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_bool_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 41
                self.match(craspParser.STRING_LITERAL)
                pass

            elif la_ == 2:
                self.state = 42
                self.count_expr(0)
                self.state = 43
                self.match(craspParser.LT)
                self.state = 44
                self.count_expr(0)
                pass

            elif la_ == 3:
                self.state = 46
                self.count_expr(0)
                self.state = 47
                self.match(craspParser.EQ)
                self.state = 48
                self.count_expr(0)
                pass

            elif la_ == 4:
                self.state = 50
                self.match(craspParser.NOT)
                self.state = 51
                self.bool_expr(5)
                pass

            elif la_ == 5:
                self.state = 52
                self.match(craspParser.VARIABLE)
                pass

            elif la_ == 6:
                self.state = 53
                self.match(craspParser.LPAREN)
                self.state = 54
                self.bool_expr(0)
                self.state = 55
                self.match(craspParser.RPAREN)
                pass

            elif la_ == 7:
                self.state = 57
                self.match(craspParser.TRUE)
                pass

            elif la_ == 8:
                self.state = 58
                self.match(craspParser.FALSE)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 66
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = craspParser.Bool_exprContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_bool_expr)
                    self.state = 61
                    if not self.precpred(self._ctx, 6):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                    self.state = 62
                    self.match(craspParser.AND)
                    self.state = 63
                    self.bool_expr(7) 
                self.state = 68
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Count_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COUNT(self):
            return self.getToken(craspParser.COUNT, 0)

        def bool_expr(self):
            return self.getTypedRuleContext(craspParser.Bool_exprContext,0)


        def VARIABLE(self):
            return self.getToken(craspParser.VARIABLE, 0)

        def INT_LITERAL(self):
            return self.getToken(craspParser.INT_LITERAL, 0)

        def MAX(self):
            return self.getToken(craspParser.MAX, 0)

        def LPAREN(self):
            return self.getToken(craspParser.LPAREN, 0)

        def count_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(craspParser.Count_exprContext)
            else:
                return self.getTypedRuleContext(craspParser.Count_exprContext,i)


        def COMMA(self):
            return self.getToken(craspParser.COMMA, 0)

        def RPAREN(self):
            return self.getToken(craspParser.RPAREN, 0)

        def MIN(self):
            return self.getToken(craspParser.MIN, 0)

        def IF(self):
            return self.getToken(craspParser.IF, 0)

        def ELSE(self):
            return self.getToken(craspParser.ELSE, 0)

        def PLUS(self):
            return self.getToken(craspParser.PLUS, 0)

        def MINUS(self):
            return self.getToken(craspParser.MINUS, 0)

        def getRuleIndex(self):
            return craspParser.RULE_count_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCount_expr" ):
                listener.enterCount_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCount_expr" ):
                listener.exitCount_expr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCount_expr" ):
                return visitor.visitCount_expr(self)
            else:
                return visitor.visitChildren(self)



    def count_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = craspParser.Count_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_count_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [19]:
                self.state = 70
                self.match(craspParser.COUNT)
                self.state = 71
                self.bool_expr(0)
                pass
            elif token in [1]:
                self.state = 72
                self.match(craspParser.VARIABLE)
                pass
            elif token in [3]:
                self.state = 73
                self.match(craspParser.INT_LITERAL)
                pass
            elif token in [18]:
                self.state = 74
                self.match(craspParser.MAX)
                self.state = 75
                self.match(craspParser.LPAREN)
                self.state = 76
                self.count_expr(0)
                self.state = 77
                self.match(craspParser.COMMA)
                self.state = 78
                self.count_expr(0)
                self.state = 79
                self.match(craspParser.RPAREN)
                pass
            elif token in [17]:
                self.state = 81
                self.match(craspParser.MIN)
                self.state = 82
                self.match(craspParser.LPAREN)
                self.state = 83
                self.count_expr(0)
                self.state = 84
                self.match(craspParser.COMMA)
                self.state = 85
                self.count_expr(0)
                self.state = 86
                self.match(craspParser.RPAREN)
                pass
            elif token in [20]:
                self.state = 88
                self.match(craspParser.LPAREN)
                self.state = 89
                self.count_expr(0)
                self.state = 90
                self.match(craspParser.RPAREN)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 106
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                    if la_ == 1:
                        localctx = craspParser.Count_exprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_count_expr)
                        self.state = 94
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 95
                        self.match(craspParser.IF)
                        self.state = 96
                        self.bool_expr(0)
                        self.state = 97
                        self.match(craspParser.ELSE)
                        self.state = 98
                        self.count_expr(7)
                        pass

                    elif la_ == 2:
                        localctx = craspParser.Count_exprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_count_expr)
                        self.state = 100
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 101
                        self.match(craspParser.PLUS)
                        self.state = 102
                        self.count_expr(6)
                        pass

                    elif la_ == 3:
                        localctx = craspParser.Count_exprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_count_expr)
                        self.state = 103
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 104
                        self.match(craspParser.MINUS)
                        self.state = 105
                        self.count_expr(5)
                        pass

             
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[2] = self.bool_expr_sempred
        self._predicates[3] = self.count_expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def bool_expr_sempred(self, localctx:Bool_exprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 6)
         

    def count_expr_sempred(self, localctx:Count_exprContext, predIndex:int):
            if predIndex == 1:
                return self.precpred(self._ctx, 6)
         

            if predIndex == 2:
                return self.precpred(self._ctx, 5)
         

            if predIndex == 3:
                return self.precpred(self._ctx, 4)
         




